--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,7 @@ body {
 .banner-text {
     max-width: 600px;
     margin-bottom: 2rem;
+    padding-right: 2rem;
 }
 
 .banner-text p {
@@ -379,18 +380,10 @@ body {
         display: none;
     }
 
-    .banner-content {
-        padding: 0 1.5rem;
-    }
-
     .banner-text {
+        padding-right: 1rem;
+        padding-left: 1rem;
         margin-bottom: 3rem;
-    }
-
-    .banner-text p {
-        margin: 0.5rem 0;
-        font-size: 1.1rem;
-        line-height: 1.5;
     }
 }
 
@@ -400,21 +393,12 @@ body {
         padding: clamp(50px, 6vh, 60px) 0 clamp(15px, 3vh, 30px);
     }
 
-    .banner-content {
-        padding: 0 1.2rem;
-    }
-
     .banner-title {
-        margin-bottom: 1.2rem;
-    }
-
-    .banner-text {
-        margin-bottom: 2.5rem;
+        margin-bottom: 1rem;
     }
 
     .banner-text p {
-        margin: 0.4rem 0;
-        font-size: 1rem;
+        margin: 0.3rem 0;
     }
 }
 
