--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     font-weight: 300;
     font-style: normal;
     font-display: swap;
+    font-display: fallback;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
     font-weight: 400;
     font-style: normal;
     font-display: swap;
+    font-display: fallback;
 }
 
 @font-face {
@@ -20,6 +22,7 @@
     font-weight: 700;
     font-style: normal;
     font-display: swap;
+    font-display: fallback;
 }
 
 body {
